src/components/Banner/Banner.css
.banner {
  position: relative;
  text-align: center;
}

.banner__image {
  width: 100vw;
}

.banner__title {
  font-weight: 700;
  position: absolute;
  top: 30%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: var(--red);
  color: white;
  width: 70%;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1rem;
  padding-bottom: 0.8rem;
}

.banner__cta {
  display: flex;
  position: absolute;
  top: 65%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}

/* Max Width */
@media (max-width: 366px) {
  .banner__title {
    padding-left: 0rem;
    padding-right: 0rem;
    padding-top: 0.3rem;
    padding-bottom: 0.3rem;
    color: white;
  }

  .banner__cta {
    display: flex;
    position: absolute;
    top: 75%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
  }
}

/* Min Width */
@media (min-width: 400px) {
  .banner__cta {
    transform: translate(-50%, -50%) scale(1);
  }
}

@media (min-width: 516px) {
  .banner__cta {
    transform: translate(-50%, -50%) scale(1.3);
  }
}

@media (min-width: 640px) {
  .banner__cta {
    transform: translate(-50%, -50%) scale(1.5);
  }
}

@media (min-width: 965px) {
  .banner__cta {
    transform: translate(-50%, -50%) scale(2);
  }
}

